--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "bindingsCDN": "https://raw.githubusercontent.com/zhangyuanwei/node-images/master/bindings/",
   "scripts": {
-    "test": "node test.js",
-    "install": "(node ./install.js 2> builderror.log) || (exit 0)"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
